--- a/index.html
+++ b/index.html
@@ -28,7 +28,40 @@
 </head>
 
 <body>
-
+    <!-- Header -->
+    <header>
+        <div>
+            <img src="images/logo.ico" alt="logo"> <!--alt는 대체글자-->
+            <h1><a href="#">キムヒョンジョン</a></h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#work">My work</a></li>
+                <li><a href="#testimonial">Testimonial</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- Main -->
+    <main>
+        <!-- Home -->
+        <section id="home"></section>
+        <!-- About -->
+        <section id="about"></section>
+        <!-- Skills -->
+        <section id="skills"></section>
+        <!-- Work -->
+        <section id="work"></section>
+        <!-- Testimonials -->
+        <section id="testimonial"></section>
+        <!-- Arrow up -->
+        <aside></aside>
+    </main>
+    <!-- Footer -->
+    <footer id="contact"></footer>
 </body>
 
 </html>
