--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <header>
         <div>
             <img src="images/logo.ico" alt="logo"> <!--alt는 대체글자-->
-            <h1><a href="#">キムヒョンジョン</a></h1>
+            <h1><a href="#">KIM</a></h1>
         </div>
         <nav>
             <ul>
@@ -48,7 +48,12 @@
     <!-- Main -->
     <main>
         <!-- Home -->
-        <section id="home"></section>
+        <section id="home">
+            <img src="images/profile.png" alt="Hyun's profile">
+            <h2>Hello I&#39;m HyunJong Kim</h2>
+            <p>A curious engineer-in-training from Korea.</p>
+            <a href="#contact">Contact Me</a>
+        </section>
         <!-- About -->
         <section id="about"></section>
         <!-- Skills -->
