--- a/index.html
+++ b/index.html
@@ -55,7 +55,44 @@
             <a href="#contact">Contact Me</a>
         </section>
         <!-- About -->
-        <section id="about"></section>
+        <section id="about">
+            <h2>About me</h2>
+            <p>日本で働きながら、Web開発のスキルを磨いています。
+                目指すのは、人の役に立つサービスを作ること
+            </p>
+            <ul>
+                <li>
+                    <i class="fa-brands fa-html5"></i>
+                    <p>Front-end</p>
+                    <p>HTML, CSS, JavaScript, TypeScript, React, Web APIs</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-mobile"></i>
+                    <p>Mobile</p>
+                    <p>Android, IOS, React Navtive, Java</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-server"></i>
+                    <p>Back-end</p>
+                    <p>Java, Javascript, NodeJs, Rest APIs</p>
+                </li>
+            </ul>
+            <ul>
+                <li><img src="images/jobs/nuri.png" alt="nurisoft logo">
+                    <div>
+                        <p>Nurisoft as Server Maintenance Engineer</p>
+                        <p>2018 Jan - 2020 Jan</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="images/jobs/ost.png" alt="ost logo">
+                    <div>
+                        <p>Outsourcing Technology as Mechanical Design Engineer</p>
+                        <p>2022 Aug - 2022 Nov</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
         <!-- Skills -->
         <section id="skills"></section>
         <!-- Work -->
