--- a/index.html
+++ b/index.html
@@ -94,7 +94,68 @@
             </ul>
         </section>
         <!-- Skills -->
-        <section id="skills"></section>
+        <section id="skills">
+            <h2>My Skills</h2>
+            <p>Skills & Attributes</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, enim culpa aliquam debitis quod ipsam.
+                Molestias beatae maiores aperiam culpa ab, necessitatibus at iusto exercitationem. Aperiam illo
+                reiciendis est deleniti.</p>
+            <div>
+                <section>
+                    <h3>Coding Skills</h3>
+                    <ul>
+                        <li>
+                            <div><span>HTML</span><span>98%</span></div>
+                            <div></div style="width: 98%">
+                            <div></div>
+                        </li>
+                        <li>
+                            <div><span>CSS</span><span>90%</span></div>
+                            <div></div style="width: 90%">
+                            <div></div>
+                        </li>
+                        <li>
+                            <div><span>JavaScript</span><span>90%</span></div>
+                            <div></div style="width: 90%">
+                            <div></div>
+                        </li>
+                        <li>
+                            <div><span>TypeScript</span><span>80%</span></div>
+                            <div></div style="width: 80%">
+                            <div></div>
+                        </li>
+                        <li>
+                            <div><span>React</span><span>70%</span></div>
+                            <div></div style="width: 70%">
+                            <div></div>
+                        </li>
+                        <li>
+                            <div><span>NodeJS</span><span>68%</span></div>
+                            <div></div style="width: 68%">
+                            <div></div>
+                        </li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Tools</h3>
+                    <ul>
+                        <li>Visual Studio Code</li>
+                        <li>IntelliJ</li>
+                        <li>Android Studio Code</li>
+                        <li>IOS development tools</li>
+                        <li>Sketch app</li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Etc</h3>
+                    <ul>
+                        <li>Git</li>
+                        <li>Scrum Master</li>
+                        <li>Math</li>
+                    </ul>
+                </section>
+            </div>
+        </section>
         <!-- Work -->
         <section id="work"></section>
         <!-- Testimonials -->
