--- a/index.html
+++ b/index.html
@@ -234,7 +234,43 @@
             </ui>
         </section>
         <!-- Testimonials -->
-        <section id="testimonial"></section>
+        <section id="testimonial">
+            <h2>Testimonial</h2>
+            <p>See what they say about me</p>
+            <ul>
+                <li><img src="images/testimonials/people1.webp" alt="people1">
+                    <div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem consectetur numquam iste id
+                            neque explicabo officiis voluptatibus beatae excepturi dignissimos impedit provident
+                            voluptates repudiandae, quaerat minima magnam quidem enim dolorum.
+                        </p>
+                        <p><a href="#">James Kim</a> /Nurisoft</p>
+                    </div>
+                </li>
+
+                <li><img src="images/testimonials/people2.webp" alt="people2">
+                    <div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, quam atque. Hic voluptas
+                            similique ab, eius, nisi quos alias necessitatibus laboriosam accusantium autem animi in
+                            voluptates excepturi quo ex perferendis.
+                        </p>
+                        <p><a href="#">Jisu Kim</a> /Outsourcing Technology</p>
+                    </div>
+                </li>
+                <li><img src="images/testimonials/people3.webp" alt="people3">
+                    <div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, labore? Cumque dolorum
+                            asperiores praesentium laborum ipsa voluptatibus nostrum ipsam quia molestias amet! Illum,
+                            numquam ea earum dolores nesciunt fuga non.
+                        </p>
+                        <p><a href="#">Anna Jin</a> /タマガワ</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
         <!-- Arrow up -->
         <aside></aside>
     </main>
