--- a/index.html
+++ b/index.html
@@ -272,10 +272,29 @@
             </ul>
         </section>
         <!-- Arrow up -->
-        <aside></aside>
+        <aside>
+            <a href="#home" title="back to top">
+                <i class="fa-solid fa-arrow-up"></i>
+            </a>
+        </aside>
     </main>
     <!-- Footer -->
-    <footer id="contact"></footer>
+    <footer id="contact">
+        <h2>Let&#39;s talk</h2>
+        <p>wlgusl3358@gmail.com</p>
+        <ul>
+            <li><a href="http://github.com/" target="_blank" title="my github link">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+            </li>
+            <li><a href="http://github.com/" target="_blank" title="my linkedin link">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+            </li>
+        </ul>
+        <p>📍 Osaka, Japan</p>
+        <p>©HyunJong Kim | Made with 💻 & ☕</p>
+    </footer>
 </body>
 
 </html>
