--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     <main>
         <!-- Home -->
         <section id="home">
-            <img src="images/profile.png" alt="Hyun's profile">
-            <h2>Hello I&#39;m HyunJong Kim</h2>
-            <p>A curious engineer-in-training from Korea.</p>
-            <a href="#contact">Contact Me</a>
+            <img class="home__avatar" src="images/profile.png" alt="Hyun's profile">
+            <h2 class="home__title">こんにちは <br /><strong class="home__title--strong">キムヒョンジョン</strong>と申します</h2>
+            <p class="home__description">韓国出身の、好奇心旺盛なエンジニアの卵です</p>
+            <a class="home__contact" href="#contact">Contact Me</a>
         </section>
         <!-- About -->
         <section id="about">
