--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
             <a class="home__contact" href="#contact">Contact Me</a>
         </section>
         <!-- About -->
-        <section id="about">
-            <h2>About me</h2>
-            <p>日本で働きながら、Web開発のスキルを磨いています。
-                目指すのは、人の役に立つサービスを作ること
+        <section id="about" class="section">
+            <h2 class="title">About me</h2>
+            <p class="description">日本で働きながら、Web開発のスキルを磨いています。目指すのは、人の役に立つサービスを作ること
             </p>
             <ul>
                 <li>
@@ -94,9 +93,9 @@
             </ul>
         </section>
         <!-- Skills -->
-        <section id="skills">
-            <h2>My Skills</h2>
-            <p>Skills & Attributes</p>
+        <section id="skills" class="section">
+            <h2 class="title">My Skills</h2>
+            <p class="description">Skills & Attributes</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, enim culpa aliquam debitis quod ipsam.
                 Molestias beatae maiores aperiam culpa ab, necessitatibus at iusto exercitationem. Aperiam illo
                 reiciendis est deleniti.</p>
@@ -157,9 +156,9 @@
             </div>
         </section>
         <!-- Work -->
-        <section id="work">
-            <h2>My work</h2>
-            <p>Projects</p>
+        <section id="work" class="section">
+            <h2 class="title">My work</h2>
+            <p class="description">Projects</p>
             <ul>
                 <li><button>All <span>8</span></button></li>
                 <li><button>Front-end <span>3</span></button></li>
@@ -234,9 +233,9 @@
             </ui>
         </section>
         <!-- Testimonials -->
-        <section id="testimonial">
-            <h2>Testimonial</h2>
-            <p>See what they say about me</p>
+        <section id="testimonial" class="section">
+            <h2 class="title">Testimonial</h2>
+            <p class="description">See what they say about me</p>
             <ul>
                 <li><img src="images/testimonials/people1.webp" alt="people1">
                     <div>
@@ -279,9 +278,9 @@
         </aside>
     </main>
     <!-- Footer -->
-    <footer id="contact">
-        <h2>Let&#39;s talk</h2>
-        <p>wlgusl3358@gmail.com</p>
+    <footer id="contact" class="section">
+        <h2 class="title">Let&#39;s talk</h2>
+        <p class="description">wlgusl3358@gmail.com</p>
         <ul>
             <li><a href="http://github.com/" target="_blank" title="my github link">
                     <i class="fa-brands fa-github"></i>
