--- a/index.html
+++ b/index.html
@@ -55,39 +55,39 @@
             <a class="home__contact" href="#contact">Contact Me</a>
         </section>
         <!-- About -->
-        <section id="about" class="section">
+        <section id="about" class="section max-container">
             <h2 class="title">About me</h2>
             <p class="description">日本で働きながら、Web開発のスキルを磨いています。目指すのは、人の役に立つサービスを作ること
             </p>
-            <ul>
-                <li>
-                    <i class="fa-brands fa-html5"></i>
-                    <p>Front-end</p>
+            <ul class="majors">
+                <li class="major">
+                    <i class="fa-brands fa-html5 major__icon"></i>
+                    <p class="major__title">Front-end</p>
                     <p>HTML, CSS, JavaScript, TypeScript, React, Web APIs</p>
                 </li>
-                <li>
-                    <i class="fa-solid fa-mobile"></i>
-                    <p>Mobile</p>
+                <li class="major">
+                    <i class="fa-solid fa-mobile major__icon"></i>
+                    <p class="major__title">Mobile</p>
                     <p>Android, IOS, React Navtive, Java</p>
                 </li>
-                <li>
-                    <i class="fa-solid fa-server"></i>
-                    <p>Back-end</p>
+                <li class="major">
+                    <i class="fa-solid fa-server major__icon"></i>
+                    <p class="major__title">Back-end</p>
                     <p>Java, Javascript, NodeJs, Rest APIs</p>
                 </li>
             </ul>
-            <ul>
-                <li><img src="images/jobs/nuri.png" alt="nurisoft logo">
+            <ul class="jobs">
+                <li class="job"><img src="images/jobs/nuri.png" alt="nurisoft logo">
                     <div>
-                        <p>Nurisoft as Server Maintenance Engineer</p>
-                        <p>2018 Jan - 2020 Jan</p>
+                        <p class="job__name">Nurisoft as Server Maintenance Engineer</p>
+                        <p class="job__period">2018 Jan - 2020 Jan</p>
                     </div>
                 </li>
-                <li>
+                <li class="job">
                     <img src="images/jobs/ost.png" alt="ost logo">
                     <div>
-                        <p>Outsourcing Technology as Mechanical Design Engineer</p>
-                        <p>2022 Aug - 2022 Nov</p>
+                        <p class="job__name">Outsourcing Technology as Mechanical Design Engineer</p>
+                        <p class="job__period">2022 Aug - 2022 Nov</p>
                     </div>
                 </li>
             </ul>
