--- a/index.html
+++ b/index.html
@@ -94,65 +94,70 @@
         </section>
         <!-- Skills -->
         <section id="skills" class="section">
-            <h2 class="title">My Skills</h2>
-            <p class="description">Skills & Attributes</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, enim culpa aliquam debitis quod ipsam.
-                Molestias beatae maiores aperiam culpa ab, necessitatibus at iusto exercitationem. Aperiam illo
-                reiciendis est deleniti.</p>
-            <div>
-                <section>
-                    <h3>Coding Skills</h3>
-                    <ul>
-                        <li>
-                            <div><span>HTML</span><span>98%</span></div>
-                            <div></div style="width: 98%">
-                            <div></div>
-                        </li>
-                        <li>
-                            <div><span>CSS</span><span>90%</span></div>
-                            <div></div style="width: 90%">
-                            <div></div>
-                        </li>
-                        <li>
-                            <div><span>JavaScript</span><span>90%</span></div>
-                            <div></div style="width: 90%">
-                            <div></div>
-                        </li>
-                        <li>
-                            <div><span>TypeScript</span><span>80%</span></div>
-                            <div></div style="width: 80%">
-                            <div></div>
-                        </li>
-                        <li>
-                            <div><span>React</span><span>70%</span></div>
-                            <div></div style="width: 70%">
-                            <div></div>
-                        </li>
-                        <li>
-                            <div><span>NodeJS</span><span>68%</span></div>
-                            <div></div style="width: 68%">
-                            <div></div>
-                        </li>
-                    </ul>
-                </section>
-                <section>
-                    <h3>Tools</h3>
-                    <ul>
-                        <li>Visual Studio Code</li>
-                        <li>IntelliJ</li>
-                        <li>Android Studio Code</li>
-                        <li>IOS development tools</li>
-                        <li>Sketch app</li>
-                    </ul>
-                </section>
-                <section>
-                    <h3>Etc</h3>
-                    <ul>
-                        <li>Git</li>
-                        <li>Scrum Master</li>
-                        <li>Math</li>
-                    </ul>
-                </section>
+            <div class="max-container">
+                <h2 class="title">My Skills</h2>
+                <p class="description">Skills & Attributes</p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, enim culpa aliquam debitis quod
+                    ipsam.
+                    Molestias beatae maiores aperiam culpa ab, necessitatibus at iusto exercitationem. Aperiam illo
+                    reiciendis est deleniti.
+                </p>
+                <div class="skills">
+                    <section class="skills__coding">
+                        <h3 class="skills__title">Coding Skills</h3>
+                        <ul>
+                            <li>
+                                <div><span>HTML</span><span>98%</span></div>
+                                <div></div style="width: 98%">
+                                <div></div>
+                            </li>
+                            <li>
+                                <div><span>CSS</span><span>90%</span></div>
+                                <div></div style="width: 90%">
+                                <div></div>
+                            </li>
+                            <li>
+                                <div><span>JavaScript</span><span>90%</span></div>
+                                <div></div style="width: 90%">
+                                <div></div>
+                            </li>
+                            <li>
+                                <div><span>TypeScript</span><span>80%</span></div>
+                                <div></div style="width: 80%">
+                                <div></div>
+                            </li>
+                            <li>
+                                <div><span>React</span><span>70%</span></div>
+                                <div></div style="width: 70%">
+                                <div></div>
+                            </li>
+                            <li>
+                                <div><span>NodeJS</span><span>68%</span></div>
+                                <div></div style="width: 68%">
+                                <div></div>
+                            </li>
+                        </ul>
+                    </section>
+                    <section class="skills__tools">
+                        <h3 class="skills__title">Tools</h3>
+                        <ul>
+                            <li>Visual Studio Code</li>
+                            <li>IntelliJ</li>
+                            <li>Android Studio Code</li>
+                            <li>IOS development tools</li>
+                            <li>Sketch app</li>
+                        </ul>
+                    </section>
+                    <section class="skills__etc">
+                        <h3 class="skills__title">Etc</h3>
+                        <ul>
+                            <li>Git</li>
+                            <li>Scrum Master</li>
+                            <li>Math</li>
+                        </ul>
+                    </section>
+                </div>
             </div>
         </section>
         <!-- Work -->
