--- a/index.html
+++ b/index.html
@@ -254,39 +254,42 @@
             </div>
         </section>
         <!-- Testimonials -->
-        <section id="testimonial" class="section">
+        <section id="testimonial" class="section max-container">
             <h2 class="title">Testimonial</h2>
             <p class="description">See what they say about me</p>
-            <ul>
-                <li><img src="images/testimonials/people1.webp" alt="people1">
-                    <div>
+            <ul class="testimonials">
+                <li class="testimonial"><img src="images/testimonials/people1.webp" alt="people1"
+                        class="testimonial__img">
+                    <div class="testimonial__bubble">
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem consectetur numquam iste id
                             neque explicabo officiis voluptatibus beatae excepturi dignissimos impedit provident
                             voluptates repudiandae, quaerat minima magnam quidem enim dolorum.
                         </p>
-                        <p><a href="#">James Kim</a> /Nurisoft</p>
+                        <p><a href="#" class="testimonial__bubble__name">James Kim</a> /Nurisoft</p>
                     </div>
                 </li>
 
-                <li><img src="images/testimonials/people2.webp" alt="people2">
-                    <div>
+                <li class="testimonial"><img src="images/testimonials/people2.webp" alt="people2"
+                        class="testimonial__img">
+                    <div class="testimonial__bubble">
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, quam atque. Hic voluptas
                             similique ab, eius, nisi quos alias necessitatibus laboriosam accusantium autem animi in
                             voluptates excepturi quo ex perferendis.
                         </p>
-                        <p><a href="#">Jisu Kim</a> /Outsourcing Technology</p>
+                        <p><a href="#" class="testimonial__bubble__name">Jisu Kim</a> /Outsourcing Technology</p>
                     </div>
                 </li>
-                <li><img src="images/testimonials/people3.webp" alt="people3">
-                    <div>
+                <li class="testimonial"><img src="images/testimonials/people3.webp" alt="people3"
+                        class="testimonial__img">
+                    <div class="testimonial__bubble">
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, labore? Cumque dolorum
                             asperiores praesentium laborum ipsa voluptatibus nostrum ipsam quia molestias amet! Illum,
                             numquam ea earum dolores nesciunt fuga non.
                         </p>
-                        <p><a href="#">Anna Jin</a> /タマガワ</p>
+                        <p><a href="#" class="testimonial__bubble__name">Anna Jin</a> /タマガワ</p>
                     </div>
                 </li>
             </ul>
