--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <li class="major">
                     <i class="fa-brands fa-html5 major__icon"></i>
                     <p class="major__title">Front-end</p>
-                    <p>HTML, CSS, JavaScript, TypeScript, React, Web APIs</p>
+                    <p>HTML, CSS, JavaScript, TypeScript,<br> React, Web APIs</p>
                 </li>
                 <li class="major">
                     <i class="fa-solid fa-mobile major__icon"></i>
@@ -296,27 +296,30 @@
         </section>
         <!-- Arrow up -->
         <aside>
-            <a href="#home" title="back to top">
+            <a class="arrow-up" href="#home" title="back to top">
                 <i class="fa-solid fa-arrow-up"></i>
             </a>
         </aside>
     </main>
+
     <!-- Footer -->
     <footer id="contact" class="section">
-        <h2 class="title">Let&#39;s talk</h2>
-        <p class="description">wlgusl3358@gmail.com</p>
-        <ul>
-            <li><a href="http://github.com/" target="_blank" title="my github link">
-                    <i class="fa-brands fa-github"></i>
-                </a>
-            </li>
-            <li><a href="http://github.com/" target="_blank" title="my linkedin link">
-                    <i class="fa-brands fa-linkedin"></i>
-                </a>
-            </li>
-        </ul>
-        <p>📍 Osaka, Japan</p>
-        <p>©HyunJong Kim | Made with 💻 & ☕</p>
+        <div class="max-container">
+            <h2 class="title">Let&#39;s talk</h2>
+            <p class="description">wlgusl3358@gmail.com</p>
+            <ul class="contact__links">
+                <li><a class="contact__link" href="http://github.com/" target="_blank" title="my github link">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                </li>
+                <li><a class="contact__link" href="http://github.com/" target="_blank" title="my linkedin link">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                </li>
+            </ul>
+            <p>📍 Osaka, Japan</p>
+            <p>©HyunJong Kim | Made with 💻 & ☕</p>
+        </div>
     </footer>
 </body>
 
