--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img class="header__logo__img" src="images/logo.ico" alt="logo"> <!--alt는 대체글자-->
             <h1 class="header__logo__title"><a href="#">KIM</a></h1>
         </div>
-        <nav>
+        <nav class="header__nav">
             <ul class="header__menu">
                 <li><a class="header__menu__item active" href="#home">Home</a></li>
                 <li><a class="header__menu__item" href="#about">About</a></li>
