--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
     <main>
         <!-- Home -->
         <section id="home">
-            <img class="home__avatar" src="images/profile.png" alt="Hyun's profile">
-            <h2 class="home__title">こんにちは <br /><strong class="home__title--strong">キムヒョンジョン</strong>と申します</h2>
-            <p class="home__description">韓国出身の、好奇心旺盛なエンジニアの卵です</p>
-            <a class="home__contact" href="#contact">Contact Me</a>
+            <div class="home__container">
+                <img class="home__avatar" src="images/profile.png" alt="Hyun's profile">
+                <h2 class="home__title">こんにちは <br /><strong class="home__title--strong">キムヒョンジョン</strong>と申します</h2>
+                <p class="home__description">韓国出身の、好奇心旺盛なエンジニアの卵です</p>
+                <a class="home__contact" href="#contact">Contact Me</a>
+            </div>
         </section>
         <!-- About -->
         <section id="about" class="section max-container">
