--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Javascript -->
-    <script src="src/main.js" defer></script>
+    <script type="module" src="src/main.js" defer></script>
+    <script type="module" src="src/projects.js" defer></script>
+    scrip
 </head>
 
 <body>
