--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- OG(Open Graph Date)  사이트를 대표하는 이미지-->
     <meta property="og:title" content="Miniプロジェクト">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="배포후 생성된 URL">
-    <meta property="og:image" content="배포후 생성된 이미지 URL">
+    <meta property="og:url" content="https://kirby-hyun.github.io/my_site/">
+    <meta property="og:image" content="https://kirby-hyun.github.io/my_site/images/og.webp">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -105,10 +105,8 @@
                 <h2 class="title">My Skills</h2>
                 <p class="description">Skills & Attributes</p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, enim culpa aliquam debitis quod
-                    ipsam.
-                    Molestias beatae maiores aperiam culpa ab, necessitatibus at iusto exercitationem. Aperiam illo
-                    reiciendis est deleniti.
+                    HTML、CSS、JavaScriptを中心に身につけており、TypeScript、React、Node.jsのスキルアップにも取り組んでいます。
+                    新しいツールや最新技術の習得に情熱を持ち、幅広く活躍できる開発者を目指しています。
                 </p>
                 <div class="skills">
                     <section class="skills__coding">
@@ -273,11 +271,9 @@
                         class="testimonial__img">
                     <div class="testimonial__bubble">
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem consectetur numquam iste id
-                            neque explicabo officiis voluptatibus beatae excepturi dignissimos impedit provident
-                            voluptates repudiandae, quaerat minima magnam quidem enim dolorum.
+                            常に高い責任感を持って業務に取り組み、どんな課題にも冷静に対応してくれます。チームメンバーとのコミュニケーションも円滑で、周りからの信頼がとても厚い方です。
                         </p>
-                        <p><a href="#" class="testimonial__bubble__name">James Kim</a> /Nurisoft</p>
+                        <p><a href="#" class="testimonial__bubble__name">李 さん</a> /Nurisoft</p>
                     </div>
                 </li>
 
@@ -285,22 +281,18 @@
                         class="testimonial__img">
                     <div class="testimonial__bubble">
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, quam atque. Hic voluptas
-                            similique ab, eius, nisi quos alias necessitatibus laboriosam accusantium autem animi in
-                            voluptates excepturi quo ex perferendis.
+                            周りをよく見て動いてくれるし、一緒に仕事をすると安心感があります。頼りになるだけじゃなく、場を明るくしてくれる存在です。
                         </p>
-                        <p><a href="#" class="testimonial__bubble__name">Jisu Kim</a> /Outsourcing Technology</p>
+                        <p><a href="#" class="testimonial__bubble__name">阿部 さん</a> /Outsourcing Technology</p>
                     </div>
                 </li>
                 <li class="testimonial"><img src="images/testimonials/people3.webp" alt="people3"
                         class="testimonial__img">
                     <div class="testimonial__bubble">
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, labore? Cumque dolorum
-                            asperiores praesentium laborum ipsa voluptatibus nostrum ipsam quia molestias amet! Illum,
-                            numquam ea earum dolores nesciunt fuga non.
+                            問題解決能力が高く、最後までやり遂げる粘り強さがあります。新しい知識やスキルの習得にも積極的で、常に成長し続けている印象を受けます。
                         </p>
-                        <p><a href="#" class="testimonial__bubble__name">Anna Jin</a> /タマガワ</p>
+                        <p><a href="#" class="testimonial__bubble__name">玉川 さん</a> /タマガワ</p>
                     </div>
                 </li>
             </ul>
@@ -323,8 +315,10 @@
                         <i class="fa-brands fa-github"></i>
                     </a>
                 </li>
-                <li><a class="contact__link" href="http://github.com/" target="_blank" title="my linkedin link">
-                        <i class="fa-brands fa-linkedin"></i>
+                <li><a class="contact__link"
+                        href="https://www.instagram.com/rlaguswhd?igsh=emtocXRobTU0bXJn&utm_source=qr" target="_blank"
+                        title="my Instagram">
+                        <i class="fa-brands fa-instagram"></i>
                     </a>
                 </li>
             </ul>
