--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
         rel="stylesheet">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/7b079dc5f4.js" crossorigin="anonymous"></script>
+    <!-- Typeit -->
+    <script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js"></script>
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Javascript -->
     <script type="module" src="src/main.js" defer></script>
     <script type="module" src="src/projects.js" defer></script>
     <script type="module" src="src/active_menu.js" defer></script>
+    <script type="module" src="src/type.js" defer></script>
 </head>
 
 <body>
@@ -56,11 +59,14 @@
         <section id="home">
             <div class="home__container">
                 <img class="home__avatar" src="images/profile.png" alt="Hyun's profile">
-                <h2 class="home__title">こんにちは <br /><strong class="home__title--strong">キムヒョンジョン</strong>と申します</h2>
+                <h2 class="home__title" aria-label="Hello, I'm Hyun Jong Kim">こんにちは <br />
+                    <strong class="home__title--strong">キムヒョンジョン</strong>と申します
+                </h2>
                 <p class="home__description">韓国出身の、好奇心旺盛なエンジニアの卵です</p>
                 <a class="home__contact" href="#contact">Contact Me</a>
             </div>
         </section>
+
         <!-- About -->
         <section id="about" class="section max-container">
             <h2 class="title">About me</h2>
@@ -177,6 +183,8 @@
                 </div>
             </div>
         </section>
+
+
         <!-- Work -->
         <section id="work" class="section">
             <div class="max-container">
