--- a/index.html
+++ b/index.html
@@ -57,13 +57,15 @@
     <main>
         <!-- Home -->
         <section id="home">
-            <div class="home__container">
+            <div class="max-container home__container">
                 <img class="home__avatar" src="images/profile.png" alt="Hyun's profile">
-                <h2 class="home__title" aria-label="Hello, I'm Hyun Jong Kim">こんにちは <br />
-                    <strong class="home__title--strong">キムヒョンジョン</strong>と申します
-                </h2>
-                <p class="home__description">韓国出身の、好奇心旺盛なエンジニアの卵です</p>
-                <a class="home__contact" href="#contact">Contact Me</a>
+                <div>
+                    <h2 class="home__title" aria-label="Hello, I'm Hyun Jong Kim">こんにちは <br />
+                        <strong class="home__title--strong">キムヒョンジョン</strong>と申します
+                    </h2>
+                    <p class="home__description">韓国出身の、好奇心旺盛なエンジニアの卵です</p>
+                    <a class="home__contact" href="#contact">Contact Me</a>
+                </div>
             </div>
         </section>
 
